[tool.isort]
profile = "black"

[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["Tyson McNulty"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
isort = "^5.12.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
